// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RHSM Constants should have specific properties: all exported constants 1`] = `
{
  "RHSM_API_PATH_METRIC_TYPES": {
    "CORES": "Cores",
    "CORE_SECONDS": "Core-seconds",
    "INSTANCE_HOURS": "Instance-hours",
    "SOCKETS": "Sockets",
    "STORAGE_GIBIBYTES": "Storage-gibibytes",
    "STORAGE_GIBIBYTE_MONTHS": "Storage-gibibyte-months",
    "TRANSFER_GIBIBYTES": "Transfer-gibibytes",
  },
  "RHSM_API_PATH_PRODUCT_TYPES": {
    "OPENSHIFT": "OpenShift Container Platform",
    "OPENSHIFT_DEDICATED_METRICS": "OpenShift-dedicated-metrics",
    "OPENSHIFT_METRICS": "OpenShift-metrics",
    "RHACS": "rhacs",
    "RHEL": "RHEL",
    "RHEL_ARM": "RHEL for ARM",
    "RHEL_COMPUTE_NODE": "RHEL Compute Node",
    "RHEL_DESKTOP": "RHEL Desktop",
    "RHEL_IBM_POWER": "RHEL for IBM Power",
    "RHEL_IBM_Z": "RHEL for IBM z",
    "RHEL_SERVER": "RHEL Server",
    "RHEL_WORKSTATION": "RHEL Workstation",
    "RHEL_X86": "RHEL for x86",
    "RHODS": "rhods",
    "ROSA": "rosa",
    "SATELLITE": "Satellite",
    "SATELLITE_CAPSULE": "Satellite Capsule",
    "SATELLITE_SERVER": "Satellite Server",
  },
  "RHSM_API_PATH_PRODUCT_VARIANT_RHEL_TYPES": {
    "RHEL_ARM": "RHEL for ARM",
    "RHEL_IBM_POWER": "RHEL for IBM Power",
    "RHEL_IBM_Z": "RHEL for IBM z",
    "RHEL_X86": "RHEL for x86",
  },
  "RHSM_API_PATH_PRODUCT_VARIANT_SATELLITE_TYPES": {
    "SATELLITE_CAPSULE": "Satellite Capsule",
    "SATELLITE_SERVER": "Satellite Server",
  },
  "RHSM_API_QUERY_BILLING_PROVIDER_TYPES": {
    "AWS": "aws",
    "RED_HAT": "red hat",
  },
  "RHSM_API_QUERY_CATEGORY_TYPES": {
    "CLOUD": "cloud",
    "HYPERVISOR": "hypervisor",
    "ON_DEMAND": "on-demand",
    "PHYSICAL": "physical",
    "PREPAID": "prepaid",
    "VIRTUAL": "virtual",
  },
  "RHSM_API_QUERY_GRANULARITY_TYPES": {
    "DAILY": "Daily",
    "MONTHLY": "Monthly",
    "QUARTERLY": "Quarterly",
    "WEEKLY": "Weekly",
  },
  "RHSM_API_QUERY_INVENTORY_HOSTS_SORT_TYPES": {
    "CORES": "cores",
    "CORE_HOURS": "core_hours",
    "HARDWARE": "hardware_type",
    "INSTANCE_HOURS": "instance_hours",
    "LAST_SEEN": "last_seen",
    "MEASUREMENT": "measurement_type",
    "NAME": "display_name",
    "SOCKETS": "sockets",
  },
  "RHSM_API_QUERY_INVENTORY_SORT_DIRECTION_TYPES": {
    "ASCENDING": "asc",
    "DESCENDING": "desc",
  },
  "RHSM_API_QUERY_INVENTORY_SORT_TYPES": {
    "BILLING_PROVIDER": "billing_provider",
    "CATEGORY": "category",
    "CORES": "Cores",
    "CORE_SECONDS": "Core-seconds",
    "INSTANCE_HOURS": "Instance-hours",
    "LAST_SEEN": "last_seen",
    "NAME": "display_name",
    "NUMBER_OF_GUESTS": "number_of_guests",
    "SOCKETS": "Sockets",
    "STORAGE_GIBIBYTES": "Storage-gibibytes",
    "STORAGE_GIBIBYTE_MONTHS": "Storage-gibibyte-months",
    "TRANSFER_GIBIBYTES": "Transfer-gibibytes",
  },
  "RHSM_API_QUERY_INVENTORY_SUBSCRIPTIONS_SORT_TYPES": {
    "NEXT_EVENT_DATE": "next_event_date",
    "NEXT_EVENT_TYPE": "next_event_type",
    "PRODUCT_NAME": "product_name",
    "QUANTITY": "quantity",
    "SERVICE_LEVEL": "service_level",
    "SKU": "sku",
    "TOTAL_CAPACITY": "total_capacity",
    "USAGE": "usage",
  },
  "RHSM_API_QUERY_SET_INVENTORY_TYPES": {
    "BILLING_ACCOUNT_ID": "billing_account_id",
    "BILLING_PROVIDER": "billing_provider",
    "CATEGORY": "category",
    "DIRECTION": "dir",
    "DISPLAY_NAME": "display_name_contains",
    "END_DATE": "ending",
    "LIMIT": "limit",
    "OFFSET": "offset",
    "SLA": "sla",
    "SORT": "sort",
    "START_DATE": "beginning",
    "UOM": "uom",
    "USAGE": "usage",
    "VARIANT": "variant",
  },
  "RHSM_API_QUERY_SET_TALLY_CAPACITY_TYPES": {
    "BILLING_CATEGORY": "billing_category",
    "BILLING_PROVIDER": "billing_provider",
    "CATEGORY": "category",
    "END_DATE": "ending",
    "GRANULARITY": "granularity",
    "SLA": "sla",
    "START_DATE": "beginning",
    "USAGE": "usage",
    "USE_RUNNING_TOTALS_FORMAT": "use_running_totals_format",
    "VARIANT": "variant",
  },
  "RHSM_API_QUERY_SET_TYPES": {
    "BILLING_ACCOUNT_ID": "billing_account_id",
    "BILLING_CATEGORY": "billing_category",
    "BILLING_PROVIDER": "billing_provider",
    "CATEGORY": "category",
    "DIRECTION": "dir",
    "DISPLAY_NAME": "display_name_contains",
    "END_DATE": "ending",
    "GRANULARITY": "granularity",
    "LIMIT": "limit",
    "OFFSET": "offset",
    "SLA": "sla",
    "SORT": "sort",
    "START_DATE": "beginning",
    "UOM": "uom",
    "USAGE": "usage",
    "USE_RUNNING_TOTALS_FORMAT": "use_running_totals_format",
    "VARIANT": "variant",
  },
  "RHSM_API_QUERY_SLA_TYPES": {
    "NONE": "",
    "PREMIUM": "Premium",
    "SELF": "Self-Support",
    "STANDARD": "Standard",
  },
  "RHSM_API_QUERY_UOM_TYPES": {
    "CORES": "cores",
    "SOCKETS": "sockets",
  },
  "RHSM_API_QUERY_USAGE_TYPES": {
    "DEVELOPMENT": "Development/Test",
    "DISASTER": "Disaster Recovery",
    "PRODUCTION": "Production",
    "UNSPECIFIED": "",
  },
  "RHSM_API_RESPONSE_BILLING_PROVIDER_TYPES": {
    "AWS": "aws",
    "RED_HAT": "red hat",
  },
  "RHSM_API_RESPONSE_DATA": "data",
  "RHSM_API_RESPONSE_ERRORS": "errors",
  "RHSM_API_RESPONSE_ERRORS_CODE_TYPES": {
    "GENERIC": "SUBSCRIPTIONS1003",
    "OPTIN": "SUBSCRIPTIONS1004",
  },
  "RHSM_API_RESPONSE_ERRORS_TYPES": {
    "CODE": "code",
  },
  "RHSM_API_RESPONSE_GRANULARITY_TYPES": {
    "DAILY": "Daily",
    "MONTHLY": "Monthly",
    "QUARTERLY": "Quarterly",
    "WEEKLY": "Weekly",
  },
  "RHSM_API_RESPONSE_HOSTS_DATA_TYPES": {
    "CLOUD_PROVIDER": "cloud_provider",
    "CORES": "cores",
    "CORE_HOURS": "core_hours",
    "DISPLAY_NAME": "display_name",
    "HARDWARE_TYPE": "hardware_type",
    "INSTANCE_HOURS": "instance_hours",
    "INVENTORY_ID": "inventory_id",
    "LAST_SEEN": "last_seen",
    "MEASUREMENT_TYPE": "measurement_type",
    "NUMBER_OF_GUESTS": "number_of_guests",
    "SOCKETS": "sockets",
    "SUBSCRIPTION_MANAGER_ID": "subscription_manager_id",
  },
  "RHSM_API_RESPONSE_HOSTS_META_TYPES": {
    "COUNT": "count",
    "PRODUCT": "product",
  },
  "RHSM_API_RESPONSE_INSTANCES_DATA_TYPES": {
    "BILLING_ACCOUNT_ID": "billing_account_id",
    "BILLING_PROVIDER": "billing_provider",
    "CATEGORY": "category",
    "CLOUD_PROVIDER": "cloud_provider",
    "DISPLAY_NAME": "display_name",
    "INSTANCE_ID": "instance_id",
    "INVENTORY_ID": "inventory_id",
    "LAST_SEEN": "last_seen",
    "MEASUREMENTS": "measurements",
    "NUMBER_OF_GUESTS": "number_of_guests",
    "SUBSCRIPTION_MANAGER_ID": "subscription_manager_id",
  },
  "RHSM_API_RESPONSE_INSTANCES_META_TYPES": {
    "COUNT": "count",
    "MEASUREMENTS": "measurements",
    "PRODUCT": "product",
    "UOM": "uom",
  },
  "RHSM_API_RESPONSE_META": "meta",
  "RHSM_API_RESPONSE_META_TYPES": {
    "COUNT": "count",
    "PRODUCT": "product",
  },
  "RHSM_API_RESPONSE_SLA_TYPES": {
    "NONE": "",
    "PREMIUM": "Premium",
    "SELF": "Self-Support",
    "STANDARD": "Standard",
  },
  "RHSM_API_RESPONSE_SUBSCRIPTIONS_DATA_TYPES": {
    "BILLING_ACCOUNT_ID": "billing_account_id",
    "BILLING_PROVIDER": "billing_provider",
    "CATEGORY": "category",
    "CLOUD_PROVIDER": "cloud_provider",
    "DISPLAY_NAME": "display_name",
    "HAS_INFINITE_QUANTITY": "has_infinite_quantity",
    "INSTANCE_ID": "instance_id",
    "INVENTORY_ID": "inventory_id",
    "LAST_SEEN": "last_seen",
    "MEASUREMENTS": "measurements",
    "NEXT_EVENT_DATE": "next_event_date",
    "NUMBER_OF_GUESTS": "number_of_guests",
    "PRODUCT_NAME": "product_name",
    "QUANTITY": "quantity",
    "SERVICE_LEVEL": "service_level",
    "SUBSCRIPTION_MANAGER_ID": "subscription_manager_id",
    "TOTAL_CAPACITY": "total_capacity",
    "UOM": "uom",
  },
  "RHSM_API_RESPONSE_SUBSCRIPTIONS_META_TYPES": {
    "COUNT": "count",
    "PRODUCT": "product",
    "SUBSCRIPTION_TYPE": "subscription_type",
  },
  "RHSM_API_RESPONSE_SUBSCRIPTION_TYPES": {
    "ANNUAL": "Annual",
    "ON_DEMAND": "On-demand",
  },
  "RHSM_API_RESPONSE_TALLY_CAPACITY_DATA_TYPES": {
    "DATE": "date",
    "HAS_DATA": "has_data",
    "HAS_INFINITE_QUANTITY": "has_infinite_quantity",
    "VALUE": "value",
  },
  "RHSM_API_RESPONSE_TALLY_CAPACITY_META_TYPES": {
    "COUNT": "count",
    "DATE": "date",
    "HAS_CLOUDIGRADE_DATA": "has_cloudigrade_data",
    "HAS_CLOUDIGRADE_MISMATCH": "has_cloudigrade_mismatch",
    "HAS_DATA": "has_data",
    "METRIC_ID": "metric_id",
    "PRODUCT": "product",
    "TOTAL_MONTHLY": "total_monthly",
    "VALUE": "value",
  },
  "RHSM_API_RESPONSE_UOM_TYPES": {
    "CORES": "cores",
    "SOCKETS": "sockets",
  },
  "RHSM_API_RESPONSE_USAGE_TYPES": {
    "DEVELOPMENT": "Development/Test",
    "DISASTER": "Disaster Recovery",
    "PRODUCTION": "Production",
    "UNSPECIFIED": "",
  },
  "RHSM_INTERNAL_PRODUCT_DISPLAY_TYPES": {
    "CAPACITY": "capacity",
    "DUAL_AXES": "dual-axes",
    "HOURLY": "hourly",
    "LEGACY": "legacy",
    "PARTIAL": "partial",
  },
  "default": {
    "RHSM_API_PATH_METRIC_TYPES": {
      "CORES": "Cores",
      "CORE_SECONDS": "Core-seconds",
      "INSTANCE_HOURS": "Instance-hours",
      "SOCKETS": "Sockets",
      "STORAGE_GIBIBYTES": "Storage-gibibytes",
      "STORAGE_GIBIBYTE_MONTHS": "Storage-gibibyte-months",
      "TRANSFER_GIBIBYTES": "Transfer-gibibytes",
    },
    "RHSM_API_PATH_PRODUCT_TYPES": {
      "OPENSHIFT": "OpenShift Container Platform",
      "OPENSHIFT_DEDICATED_METRICS": "OpenShift-dedicated-metrics",
      "OPENSHIFT_METRICS": "OpenShift-metrics",
      "RHACS": "rhacs",
      "RHEL": "RHEL",
      "RHEL_ARM": "RHEL for ARM",
      "RHEL_COMPUTE_NODE": "RHEL Compute Node",
      "RHEL_DESKTOP": "RHEL Desktop",
      "RHEL_IBM_POWER": "RHEL for IBM Power",
      "RHEL_IBM_Z": "RHEL for IBM z",
      "RHEL_SERVER": "RHEL Server",
      "RHEL_WORKSTATION": "RHEL Workstation",
      "RHEL_X86": "RHEL for x86",
      "RHODS": "rhods",
      "ROSA": "rosa",
      "SATELLITE": "Satellite",
      "SATELLITE_CAPSULE": "Satellite Capsule",
      "SATELLITE_SERVER": "Satellite Server",
    },
    "RHSM_API_PATH_PRODUCT_VARIANT_RHEL_TYPES": {
      "RHEL_ARM": "RHEL for ARM",
      "RHEL_IBM_POWER": "RHEL for IBM Power",
      "RHEL_IBM_Z": "RHEL for IBM z",
      "RHEL_X86": "RHEL for x86",
    },
    "RHSM_API_PATH_PRODUCT_VARIANT_SATELLITE_TYPES": {
      "SATELLITE_CAPSULE": "Satellite Capsule",
      "SATELLITE_SERVER": "Satellite Server",
    },
    "RHSM_API_QUERY_BILLING_PROVIDER_TYPES": {
      "AWS": "aws",
      "RED_HAT": "red hat",
    },
    "RHSM_API_QUERY_CATEGORY_TYPES": {
      "CLOUD": "cloud",
      "HYPERVISOR": "hypervisor",
      "ON_DEMAND": "on-demand",
      "PHYSICAL": "physical",
      "PREPAID": "prepaid",
      "VIRTUAL": "virtual",
    },
    "RHSM_API_QUERY_GRANULARITY_TYPES": {
      "DAILY": "Daily",
      "MONTHLY": "Monthly",
      "QUARTERLY": "Quarterly",
      "WEEKLY": "Weekly",
    },
    "RHSM_API_QUERY_INVENTORY_HOSTS_SORT_TYPES": {
      "CORES": "cores",
      "CORE_HOURS": "core_hours",
      "HARDWARE": "hardware_type",
      "INSTANCE_HOURS": "instance_hours",
      "LAST_SEEN": "last_seen",
      "MEASUREMENT": "measurement_type",
      "NAME": "display_name",
      "SOCKETS": "sockets",
    },
    "RHSM_API_QUERY_INVENTORY_SORT_DIRECTION_TYPES": {
      "ASCENDING": "asc",
      "DESCENDING": "desc",
    },
    "RHSM_API_QUERY_INVENTORY_SORT_TYPES": {
      "BILLING_PROVIDER": "billing_provider",
      "CATEGORY": "category",
      "CORES": "Cores",
      "CORE_SECONDS": "Core-seconds",
      "INSTANCE_HOURS": "Instance-hours",
      "LAST_SEEN": "last_seen",
      "NAME": "display_name",
      "NUMBER_OF_GUESTS": "number_of_guests",
      "SOCKETS": "Sockets",
      "STORAGE_GIBIBYTES": "Storage-gibibytes",
      "STORAGE_GIBIBYTE_MONTHS": "Storage-gibibyte-months",
      "TRANSFER_GIBIBYTES": "Transfer-gibibytes",
    },
    "RHSM_API_QUERY_INVENTORY_SUBSCRIPTIONS_SORT_TYPES": {
      "NEXT_EVENT_DATE": "next_event_date",
      "NEXT_EVENT_TYPE": "next_event_type",
      "PRODUCT_NAME": "product_name",
      "QUANTITY": "quantity",
      "SERVICE_LEVEL": "service_level",
      "SKU": "sku",
      "TOTAL_CAPACITY": "total_capacity",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SET_INVENTORY_TYPES": {
      "BILLING_ACCOUNT_ID": "billing_account_id",
      "BILLING_PROVIDER": "billing_provider",
      "CATEGORY": "category",
      "DIRECTION": "dir",
      "DISPLAY_NAME": "display_name_contains",
      "END_DATE": "ending",
      "LIMIT": "limit",
      "OFFSET": "offset",
      "SLA": "sla",
      "SORT": "sort",
      "START_DATE": "beginning",
      "UOM": "uom",
      "USAGE": "usage",
      "VARIANT": "variant",
    },
    "RHSM_API_QUERY_SET_TALLY_CAPACITY_TYPES": {
      "BILLING_CATEGORY": "billing_category",
      "BILLING_PROVIDER": "billing_provider",
      "CATEGORY": "category",
      "END_DATE": "ending",
      "GRANULARITY": "granularity",
      "SLA": "sla",
      "START_DATE": "beginning",
      "USAGE": "usage",
      "USE_RUNNING_TOTALS_FORMAT": "use_running_totals_format",
      "VARIANT": "variant",
    },
    "RHSM_API_QUERY_SET_TYPES": {
      "BILLING_ACCOUNT_ID": "billing_account_id",
      "BILLING_CATEGORY": "billing_category",
      "BILLING_PROVIDER": "billing_provider",
      "CATEGORY": "category",
      "DIRECTION": "dir",
      "DISPLAY_NAME": "display_name_contains",
      "END_DATE": "ending",
      "GRANULARITY": "granularity",
      "LIMIT": "limit",
      "OFFSET": "offset",
      "SLA": "sla",
      "SORT": "sort",
      "START_DATE": "beginning",
      "UOM": "uom",
      "USAGE": "usage",
      "USE_RUNNING_TOTALS_FORMAT": "use_running_totals_format",
      "VARIANT": "variant",
    },
    "RHSM_API_QUERY_SLA_TYPES": {
      "NONE": "",
      "PREMIUM": "Premium",
      "SELF": "Self-Support",
      "STANDARD": "Standard",
    },
    "RHSM_API_QUERY_UOM_TYPES": {
      "CORES": "cores",
      "SOCKETS": "sockets",
    },
    "RHSM_API_QUERY_USAGE_TYPES": {
      "DEVELOPMENT": "Development/Test",
      "DISASTER": "Disaster Recovery",
      "PRODUCTION": "Production",
      "UNSPECIFIED": "",
    },
    "RHSM_API_RESPONSE_BILLING_PROVIDER_TYPES": {
      "AWS": "aws",
      "RED_HAT": "red hat",
    },
    "RHSM_API_RESPONSE_DATA": "data",
    "RHSM_API_RESPONSE_ERRORS": "errors",
    "RHSM_API_RESPONSE_ERRORS_CODE_TYPES": {
      "GENERIC": "SUBSCRIPTIONS1003",
      "OPTIN": "SUBSCRIPTIONS1004",
    },
    "RHSM_API_RESPONSE_ERRORS_TYPES": {
      "CODE": "code",
    },
    "RHSM_API_RESPONSE_GRANULARITY_TYPES": {
      "DAILY": "Daily",
      "MONTHLY": "Monthly",
      "QUARTERLY": "Quarterly",
      "WEEKLY": "Weekly",
    },
    "RHSM_API_RESPONSE_HOSTS_DATA_TYPES": {
      "CLOUD_PROVIDER": "cloud_provider",
      "CORES": "cores",
      "CORE_HOURS": "core_hours",
      "DISPLAY_NAME": "display_name",
      "HARDWARE_TYPE": "hardware_type",
      "INSTANCE_HOURS": "instance_hours",
      "INVENTORY_ID": "inventory_id",
      "LAST_SEEN": "last_seen",
      "MEASUREMENT_TYPE": "measurement_type",
      "NUMBER_OF_GUESTS": "number_of_guests",
      "SOCKETS": "sockets",
      "SUBSCRIPTION_MANAGER_ID": "subscription_manager_id",
    },
    "RHSM_API_RESPONSE_HOSTS_META_TYPES": {
      "COUNT": "count",
      "PRODUCT": "product",
    },
    "RHSM_API_RESPONSE_INSTANCES_DATA_TYPES": {
      "BILLING_ACCOUNT_ID": "billing_account_id",
      "BILLING_PROVIDER": "billing_provider",
      "CATEGORY": "category",
      "CLOUD_PROVIDER": "cloud_provider",
      "DISPLAY_NAME": "display_name",
      "INSTANCE_ID": "instance_id",
      "INVENTORY_ID": "inventory_id",
      "LAST_SEEN": "last_seen",
      "MEASUREMENTS": "measurements",
      "NUMBER_OF_GUESTS": "number_of_guests",
      "SUBSCRIPTION_MANAGER_ID": "subscription_manager_id",
    },
    "RHSM_API_RESPONSE_INSTANCES_META_TYPES": {
      "COUNT": "count",
      "MEASUREMENTS": "measurements",
      "PRODUCT": "product",
      "UOM": "uom",
    },
    "RHSM_API_RESPONSE_META": "meta",
    "RHSM_API_RESPONSE_META_TYPES": {
      "COUNT": "count",
      "PRODUCT": "product",
    },
    "RHSM_API_RESPONSE_SLA_TYPES": {
      "NONE": "",
      "PREMIUM": "Premium",
      "SELF": "Self-Support",
      "STANDARD": "Standard",
    },
    "RHSM_API_RESPONSE_SUBSCRIPTIONS_DATA_TYPES": {
      "BILLING_ACCOUNT_ID": "billing_account_id",
      "BILLING_PROVIDER": "billing_provider",
      "CATEGORY": "category",
      "CLOUD_PROVIDER": "cloud_provider",
      "DISPLAY_NAME": "display_name",
      "HAS_INFINITE_QUANTITY": "has_infinite_quantity",
      "INSTANCE_ID": "instance_id",
      "INVENTORY_ID": "inventory_id",
      "LAST_SEEN": "last_seen",
      "MEASUREMENTS": "measurements",
      "NEXT_EVENT_DATE": "next_event_date",
      "NUMBER_OF_GUESTS": "number_of_guests",
      "PRODUCT_NAME": "product_name",
      "QUANTITY": "quantity",
      "SERVICE_LEVEL": "service_level",
      "SUBSCRIPTION_MANAGER_ID": "subscription_manager_id",
      "TOTAL_CAPACITY": "total_capacity",
      "UOM": "uom",
    },
    "RHSM_API_RESPONSE_SUBSCRIPTIONS_META_TYPES": {
      "COUNT": "count",
      "PRODUCT": "product",
      "SUBSCRIPTION_TYPE": "subscription_type",
    },
    "RHSM_API_RESPONSE_SUBSCRIPTION_TYPES": {
      "ANNUAL": "Annual",
      "ON_DEMAND": "On-demand",
    },
    "RHSM_API_RESPONSE_TALLY_CAPACITY_DATA_TYPES": {
      "DATE": "date",
      "HAS_DATA": "has_data",
      "HAS_INFINITE_QUANTITY": "has_infinite_quantity",
      "VALUE": "value",
    },
    "RHSM_API_RESPONSE_TALLY_CAPACITY_META_TYPES": {
      "COUNT": "count",
      "DATE": "date",
      "HAS_CLOUDIGRADE_DATA": "has_cloudigrade_data",
      "HAS_CLOUDIGRADE_MISMATCH": "has_cloudigrade_mismatch",
      "HAS_DATA": "has_data",
      "METRIC_ID": "metric_id",
      "PRODUCT": "product",
      "TOTAL_MONTHLY": "total_monthly",
      "VALUE": "value",
    },
    "RHSM_API_RESPONSE_UOM_TYPES": {
      "CORES": "cores",
      "SOCKETS": "sockets",
    },
    "RHSM_API_RESPONSE_USAGE_TYPES": {
      "DEVELOPMENT": "Development/Test",
      "DISASTER": "Disaster Recovery",
      "PRODUCTION": "Production",
      "UNSPECIFIED": "",
    },
    "RHSM_INTERNAL_PRODUCT_DISPLAY_TYPES": {
      "CAPACITY": "capacity",
      "DUAL_AXES": "dual-axes",
      "HOURLY": "hourly",
      "LEGACY": "legacy",
      "PARTIAL": "partial",
    },
  },
  "rhsmConstants": {
    "RHSM_API_PATH_METRIC_TYPES": {
      "CORES": "Cores",
      "CORE_SECONDS": "Core-seconds",
      "INSTANCE_HOURS": "Instance-hours",
      "SOCKETS": "Sockets",
      "STORAGE_GIBIBYTES": "Storage-gibibytes",
      "STORAGE_GIBIBYTE_MONTHS": "Storage-gibibyte-months",
      "TRANSFER_GIBIBYTES": "Transfer-gibibytes",
    },
    "RHSM_API_PATH_PRODUCT_TYPES": {
      "OPENSHIFT": "OpenShift Container Platform",
      "OPENSHIFT_DEDICATED_METRICS": "OpenShift-dedicated-metrics",
      "OPENSHIFT_METRICS": "OpenShift-metrics",
      "RHACS": "rhacs",
      "RHEL": "RHEL",
      "RHEL_ARM": "RHEL for ARM",
      "RHEL_COMPUTE_NODE": "RHEL Compute Node",
      "RHEL_DESKTOP": "RHEL Desktop",
      "RHEL_IBM_POWER": "RHEL for IBM Power",
      "RHEL_IBM_Z": "RHEL for IBM z",
      "RHEL_SERVER": "RHEL Server",
      "RHEL_WORKSTATION": "RHEL Workstation",
      "RHEL_X86": "RHEL for x86",
      "RHODS": "rhods",
      "ROSA": "rosa",
      "SATELLITE": "Satellite",
      "SATELLITE_CAPSULE": "Satellite Capsule",
      "SATELLITE_SERVER": "Satellite Server",
    },
    "RHSM_API_PATH_PRODUCT_VARIANT_RHEL_TYPES": {
      "RHEL_ARM": "RHEL for ARM",
      "RHEL_IBM_POWER": "RHEL for IBM Power",
      "RHEL_IBM_Z": "RHEL for IBM z",
      "RHEL_X86": "RHEL for x86",
    },
    "RHSM_API_PATH_PRODUCT_VARIANT_SATELLITE_TYPES": {
      "SATELLITE_CAPSULE": "Satellite Capsule",
      "SATELLITE_SERVER": "Satellite Server",
    },
    "RHSM_API_QUERY_BILLING_PROVIDER_TYPES": {
      "AWS": "aws",
      "RED_HAT": "red hat",
    },
    "RHSM_API_QUERY_CATEGORY_TYPES": {
      "CLOUD": "cloud",
      "HYPERVISOR": "hypervisor",
      "ON_DEMAND": "on-demand",
      "PHYSICAL": "physical",
      "PREPAID": "prepaid",
      "VIRTUAL": "virtual",
    },
    "RHSM_API_QUERY_GRANULARITY_TYPES": {
      "DAILY": "Daily",
      "MONTHLY": "Monthly",
      "QUARTERLY": "Quarterly",
      "WEEKLY": "Weekly",
    },
    "RHSM_API_QUERY_INVENTORY_HOSTS_SORT_TYPES": {
      "CORES": "cores",
      "CORE_HOURS": "core_hours",
      "HARDWARE": "hardware_type",
      "INSTANCE_HOURS": "instance_hours",
      "LAST_SEEN": "last_seen",
      "MEASUREMENT": "measurement_type",
      "NAME": "display_name",
      "SOCKETS": "sockets",
    },
    "RHSM_API_QUERY_INVENTORY_SORT_DIRECTION_TYPES": {
      "ASCENDING": "asc",
      "DESCENDING": "desc",
    },
    "RHSM_API_QUERY_INVENTORY_SORT_TYPES": {
      "BILLING_PROVIDER": "billing_provider",
      "CATEGORY": "category",
      "CORES": "Cores",
      "CORE_SECONDS": "Core-seconds",
      "INSTANCE_HOURS": "Instance-hours",
      "LAST_SEEN": "last_seen",
      "NAME": "display_name",
      "NUMBER_OF_GUESTS": "number_of_guests",
      "SOCKETS": "Sockets",
      "STORAGE_GIBIBYTES": "Storage-gibibytes",
      "STORAGE_GIBIBYTE_MONTHS": "Storage-gibibyte-months",
      "TRANSFER_GIBIBYTES": "Transfer-gibibytes",
    },
    "RHSM_API_QUERY_INVENTORY_SUBSCRIPTIONS_SORT_TYPES": {
      "NEXT_EVENT_DATE": "next_event_date",
      "NEXT_EVENT_TYPE": "next_event_type",
      "PRODUCT_NAME": "product_name",
      "QUANTITY": "quantity",
      "SERVICE_LEVEL": "service_level",
      "SKU": "sku",
      "TOTAL_CAPACITY": "total_capacity",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SET_INVENTORY_TYPES": {
      "BILLING_ACCOUNT_ID": "billing_account_id",
      "BILLING_PROVIDER": "billing_provider",
      "CATEGORY": "category",
      "DIRECTION": "dir",
      "DISPLAY_NAME": "display_name_contains",
      "END_DATE": "ending",
      "LIMIT": "limit",
      "OFFSET": "offset",
      "SLA": "sla",
      "SORT": "sort",
      "START_DATE": "beginning",
      "UOM": "uom",
      "USAGE": "usage",
      "VARIANT": "variant",
    },
    "RHSM_API_QUERY_SET_TALLY_CAPACITY_TYPES": {
      "BILLING_CATEGORY": "billing_category",
      "BILLING_PROVIDER": "billing_provider",
      "CATEGORY": "category",
      "END_DATE": "ending",
      "GRANULARITY": "granularity",
      "SLA": "sla",
      "START_DATE": "beginning",
      "USAGE": "usage",
      "USE_RUNNING_TOTALS_FORMAT": "use_running_totals_format",
      "VARIANT": "variant",
    },
    "RHSM_API_QUERY_SET_TYPES": {
      "BILLING_ACCOUNT_ID": "billing_account_id",
      "BILLING_CATEGORY": "billing_category",
      "BILLING_PROVIDER": "billing_provider",
      "CATEGORY": "category",
      "DIRECTION": "dir",
      "DISPLAY_NAME": "display_name_contains",
      "END_DATE": "ending",
      "GRANULARITY": "granularity",
      "LIMIT": "limit",
      "OFFSET": "offset",
      "SLA": "sla",
      "SORT": "sort",
      "START_DATE": "beginning",
      "UOM": "uom",
      "USAGE": "usage",
      "USE_RUNNING_TOTALS_FORMAT": "use_running_totals_format",
      "VARIANT": "variant",
    },
    "RHSM_API_QUERY_SLA_TYPES": {
      "NONE": "",
      "PREMIUM": "Premium",
      "SELF": "Self-Support",
      "STANDARD": "Standard",
    },
    "RHSM_API_QUERY_UOM_TYPES": {
      "CORES": "cores",
      "SOCKETS": "sockets",
    },
    "RHSM_API_QUERY_USAGE_TYPES": {
      "DEVELOPMENT": "Development/Test",
      "DISASTER": "Disaster Recovery",
      "PRODUCTION": "Production",
      "UNSPECIFIED": "",
    },
    "RHSM_API_RESPONSE_BILLING_PROVIDER_TYPES": {
      "AWS": "aws",
      "RED_HAT": "red hat",
    },
    "RHSM_API_RESPONSE_DATA": "data",
    "RHSM_API_RESPONSE_ERRORS": "errors",
    "RHSM_API_RESPONSE_ERRORS_CODE_TYPES": {
      "GENERIC": "SUBSCRIPTIONS1003",
      "OPTIN": "SUBSCRIPTIONS1004",
    },
    "RHSM_API_RESPONSE_ERRORS_TYPES": {
      "CODE": "code",
    },
    "RHSM_API_RESPONSE_GRANULARITY_TYPES": {
      "DAILY": "Daily",
      "MONTHLY": "Monthly",
      "QUARTERLY": "Quarterly",
      "WEEKLY": "Weekly",
    },
    "RHSM_API_RESPONSE_HOSTS_DATA_TYPES": {
      "CLOUD_PROVIDER": "cloud_provider",
      "CORES": "cores",
      "CORE_HOURS": "core_hours",
      "DISPLAY_NAME": "display_name",
      "HARDWARE_TYPE": "hardware_type",
      "INSTANCE_HOURS": "instance_hours",
      "INVENTORY_ID": "inventory_id",
      "LAST_SEEN": "last_seen",
      "MEASUREMENT_TYPE": "measurement_type",
      "NUMBER_OF_GUESTS": "number_of_guests",
      "SOCKETS": "sockets",
      "SUBSCRIPTION_MANAGER_ID": "subscription_manager_id",
    },
    "RHSM_API_RESPONSE_HOSTS_META_TYPES": {
      "COUNT": "count",
      "PRODUCT": "product",
    },
    "RHSM_API_RESPONSE_INSTANCES_DATA_TYPES": {
      "BILLING_ACCOUNT_ID": "billing_account_id",
      "BILLING_PROVIDER": "billing_provider",
      "CATEGORY": "category",
      "CLOUD_PROVIDER": "cloud_provider",
      "DISPLAY_NAME": "display_name",
      "INSTANCE_ID": "instance_id",
      "INVENTORY_ID": "inventory_id",
      "LAST_SEEN": "last_seen",
      "MEASUREMENTS": "measurements",
      "NUMBER_OF_GUESTS": "number_of_guests",
      "SUBSCRIPTION_MANAGER_ID": "subscription_manager_id",
    },
    "RHSM_API_RESPONSE_INSTANCES_META_TYPES": {
      "COUNT": "count",
      "MEASUREMENTS": "measurements",
      "PRODUCT": "product",
      "UOM": "uom",
    },
    "RHSM_API_RESPONSE_META": "meta",
    "RHSM_API_RESPONSE_META_TYPES": {
      "COUNT": "count",
      "PRODUCT": "product",
    },
    "RHSM_API_RESPONSE_SLA_TYPES": {
      "NONE": "",
      "PREMIUM": "Premium",
      "SELF": "Self-Support",
      "STANDARD": "Standard",
    },
    "RHSM_API_RESPONSE_SUBSCRIPTIONS_DATA_TYPES": {
      "BILLING_ACCOUNT_ID": "billing_account_id",
      "BILLING_PROVIDER": "billing_provider",
      "CATEGORY": "category",
      "CLOUD_PROVIDER": "cloud_provider",
      "DISPLAY_NAME": "display_name",
      "HAS_INFINITE_QUANTITY": "has_infinite_quantity",
      "INSTANCE_ID": "instance_id",
      "INVENTORY_ID": "inventory_id",
      "LAST_SEEN": "last_seen",
      "MEASUREMENTS": "measurements",
      "NEXT_EVENT_DATE": "next_event_date",
      "NUMBER_OF_GUESTS": "number_of_guests",
      "PRODUCT_NAME": "product_name",
      "QUANTITY": "quantity",
      "SERVICE_LEVEL": "service_level",
      "SUBSCRIPTION_MANAGER_ID": "subscription_manager_id",
      "TOTAL_CAPACITY": "total_capacity",
      "UOM": "uom",
    },
    "RHSM_API_RESPONSE_SUBSCRIPTIONS_META_TYPES": {
      "COUNT": "count",
      "PRODUCT": "product",
      "SUBSCRIPTION_TYPE": "subscription_type",
    },
    "RHSM_API_RESPONSE_SUBSCRIPTION_TYPES": {
      "ANNUAL": "Annual",
      "ON_DEMAND": "On-demand",
    },
    "RHSM_API_RESPONSE_TALLY_CAPACITY_DATA_TYPES": {
      "DATE": "date",
      "HAS_DATA": "has_data",
      "HAS_INFINITE_QUANTITY": "has_infinite_quantity",
      "VALUE": "value",
    },
    "RHSM_API_RESPONSE_TALLY_CAPACITY_META_TYPES": {
      "COUNT": "count",
      "DATE": "date",
      "HAS_CLOUDIGRADE_DATA": "has_cloudigrade_data",
      "HAS_CLOUDIGRADE_MISMATCH": "has_cloudigrade_mismatch",
      "HAS_DATA": "has_data",
      "METRIC_ID": "metric_id",
      "PRODUCT": "product",
      "TOTAL_MONTHLY": "total_monthly",
      "VALUE": "value",
    },
    "RHSM_API_RESPONSE_UOM_TYPES": {
      "CORES": "cores",
      "SOCKETS": "sockets",
    },
    "RHSM_API_RESPONSE_USAGE_TYPES": {
      "DEVELOPMENT": "Development/Test",
      "DISASTER": "Disaster Recovery",
      "PRODUCTION": "Production",
      "UNSPECIFIED": "",
    },
    "RHSM_INTERNAL_PRODUCT_DISPLAY_TYPES": {
      "CAPACITY": "capacity",
      "DUAL_AXES": "dual-axes",
      "HOURLY": "hourly",
      "LEGACY": "legacy",
      "PARTIAL": "partial",
    },
  },
}
`;

exports[`RHSM Constants should have specific properties: specific constants 1`] = `
{
  "RHSM_API_PATH_METRIC_TYPES": {
    "CORES": "Cores",
    "CORE_SECONDS": "Core-seconds",
    "INSTANCE_HOURS": "Instance-hours",
    "SOCKETS": "Sockets",
    "STORAGE_GIBIBYTES": "Storage-gibibytes",
    "STORAGE_GIBIBYTE_MONTHS": "Storage-gibibyte-months",
    "TRANSFER_GIBIBYTES": "Transfer-gibibytes",
  },
  "RHSM_API_PATH_PRODUCT_TYPES": {
    "OPENSHIFT": "OpenShift Container Platform",
    "OPENSHIFT_DEDICATED_METRICS": "OpenShift-dedicated-metrics",
    "OPENSHIFT_METRICS": "OpenShift-metrics",
    "RHACS": "rhacs",
    "RHEL": "RHEL",
    "RHEL_ARM": "RHEL for ARM",
    "RHEL_COMPUTE_NODE": "RHEL Compute Node",
    "RHEL_DESKTOP": "RHEL Desktop",
    "RHEL_IBM_POWER": "RHEL for IBM Power",
    "RHEL_IBM_Z": "RHEL for IBM z",
    "RHEL_SERVER": "RHEL Server",
    "RHEL_WORKSTATION": "RHEL Workstation",
    "RHEL_X86": "RHEL for x86",
    "RHODS": "rhods",
    "ROSA": "rosa",
    "SATELLITE": "Satellite",
    "SATELLITE_CAPSULE": "Satellite Capsule",
    "SATELLITE_SERVER": "Satellite Server",
  },
  "RHSM_API_PATH_PRODUCT_VARIANT_RHEL_TYPES": {
    "RHEL_ARM": "RHEL for ARM",
    "RHEL_IBM_POWER": "RHEL for IBM Power",
    "RHEL_IBM_Z": "RHEL for IBM z",
    "RHEL_X86": "RHEL for x86",
  },
  "RHSM_API_PATH_PRODUCT_VARIANT_SATELLITE_TYPES": {
    "SATELLITE_CAPSULE": "Satellite Capsule",
    "SATELLITE_SERVER": "Satellite Server",
  },
  "RHSM_API_QUERY_BILLING_PROVIDER_TYPES": {
    "AWS": "aws",
    "RED_HAT": "red hat",
  },
  "RHSM_API_QUERY_CATEGORY_TYPES": {
    "CLOUD": "cloud",
    "HYPERVISOR": "hypervisor",
    "ON_DEMAND": "on-demand",
    "PHYSICAL": "physical",
    "PREPAID": "prepaid",
    "VIRTUAL": "virtual",
  },
  "RHSM_API_QUERY_GRANULARITY_TYPES": {
    "DAILY": "Daily",
    "MONTHLY": "Monthly",
    "QUARTERLY": "Quarterly",
    "WEEKLY": "Weekly",
  },
  "RHSM_API_QUERY_INVENTORY_HOSTS_SORT_TYPES": {
    "CORES": "cores",
    "CORE_HOURS": "core_hours",
    "HARDWARE": "hardware_type",
    "INSTANCE_HOURS": "instance_hours",
    "LAST_SEEN": "last_seen",
    "MEASUREMENT": "measurement_type",
    "NAME": "display_name",
    "SOCKETS": "sockets",
  },
  "RHSM_API_QUERY_INVENTORY_SORT_DIRECTION_TYPES": {
    "ASCENDING": "asc",
    "DESCENDING": "desc",
  },
  "RHSM_API_QUERY_INVENTORY_SORT_TYPES": {
    "BILLING_PROVIDER": "billing_provider",
    "CATEGORY": "category",
    "CORES": "Cores",
    "CORE_SECONDS": "Core-seconds",
    "INSTANCE_HOURS": "Instance-hours",
    "LAST_SEEN": "last_seen",
    "NAME": "display_name",
    "NUMBER_OF_GUESTS": "number_of_guests",
    "SOCKETS": "Sockets",
    "STORAGE_GIBIBYTES": "Storage-gibibytes",
    "STORAGE_GIBIBYTE_MONTHS": "Storage-gibibyte-months",
    "TRANSFER_GIBIBYTES": "Transfer-gibibytes",
  },
  "RHSM_API_QUERY_INVENTORY_SUBSCRIPTIONS_SORT_TYPES": {
    "NEXT_EVENT_DATE": "next_event_date",
    "NEXT_EVENT_TYPE": "next_event_type",
    "PRODUCT_NAME": "product_name",
    "QUANTITY": "quantity",
    "SERVICE_LEVEL": "service_level",
    "SKU": "sku",
    "TOTAL_CAPACITY": "total_capacity",
    "USAGE": "usage",
  },
  "RHSM_API_QUERY_SET_INVENTORY_TYPES": {
    "BILLING_ACCOUNT_ID": "billing_account_id",
    "BILLING_PROVIDER": "billing_provider",
    "CATEGORY": "category",
    "DIRECTION": "dir",
    "DISPLAY_NAME": "display_name_contains",
    "END_DATE": "ending",
    "LIMIT": "limit",
    "OFFSET": "offset",
    "SLA": "sla",
    "SORT": "sort",
    "START_DATE": "beginning",
    "UOM": "uom",
    "USAGE": "usage",
    "VARIANT": "variant",
  },
  "RHSM_API_QUERY_SET_TALLY_CAPACITY_TYPES": {
    "BILLING_CATEGORY": "billing_category",
    "BILLING_PROVIDER": "billing_provider",
    "CATEGORY": "category",
    "END_DATE": "ending",
    "GRANULARITY": "granularity",
    "SLA": "sla",
    "START_DATE": "beginning",
    "USAGE": "usage",
    "USE_RUNNING_TOTALS_FORMAT": "use_running_totals_format",
    "VARIANT": "variant",
  },
  "RHSM_API_QUERY_SET_TYPES": {
    "BILLING_ACCOUNT_ID": "billing_account_id",
    "BILLING_CATEGORY": "billing_category",
    "BILLING_PROVIDER": "billing_provider",
    "CATEGORY": "category",
    "DIRECTION": "dir",
    "DISPLAY_NAME": "display_name_contains",
    "END_DATE": "ending",
    "GRANULARITY": "granularity",
    "LIMIT": "limit",
    "OFFSET": "offset",
    "SLA": "sla",
    "SORT": "sort",
    "START_DATE": "beginning",
    "UOM": "uom",
    "USAGE": "usage",
    "USE_RUNNING_TOTALS_FORMAT": "use_running_totals_format",
    "VARIANT": "variant",
  },
  "RHSM_API_QUERY_SLA_TYPES": {
    "NONE": "",
    "PREMIUM": "Premium",
    "SELF": "Self-Support",
    "STANDARD": "Standard",
  },
  "RHSM_API_QUERY_UOM_TYPES": {
    "CORES": "cores",
    "SOCKETS": "sockets",
  },
  "RHSM_API_QUERY_USAGE_TYPES": {
    "DEVELOPMENT": "Development/Test",
    "DISASTER": "Disaster Recovery",
    "PRODUCTION": "Production",
    "UNSPECIFIED": "",
  },
  "RHSM_API_RESPONSE_BILLING_PROVIDER_TYPES": {
    "AWS": "aws",
    "RED_HAT": "red hat",
  },
  "RHSM_API_RESPONSE_DATA": "data",
  "RHSM_API_RESPONSE_ERRORS": "errors",
  "RHSM_API_RESPONSE_ERRORS_CODE_TYPES": {
    "GENERIC": "SUBSCRIPTIONS1003",
    "OPTIN": "SUBSCRIPTIONS1004",
  },
  "RHSM_API_RESPONSE_ERRORS_TYPES": {
    "CODE": "code",
  },
  "RHSM_API_RESPONSE_GRANULARITY_TYPES": {
    "DAILY": "Daily",
    "MONTHLY": "Monthly",
    "QUARTERLY": "Quarterly",
    "WEEKLY": "Weekly",
  },
  "RHSM_API_RESPONSE_HOSTS_DATA_TYPES": {
    "CLOUD_PROVIDER": "cloud_provider",
    "CORES": "cores",
    "CORE_HOURS": "core_hours",
    "DISPLAY_NAME": "display_name",
    "HARDWARE_TYPE": "hardware_type",
    "INSTANCE_HOURS": "instance_hours",
    "INVENTORY_ID": "inventory_id",
    "LAST_SEEN": "last_seen",
    "MEASUREMENT_TYPE": "measurement_type",
    "NUMBER_OF_GUESTS": "number_of_guests",
    "SOCKETS": "sockets",
    "SUBSCRIPTION_MANAGER_ID": "subscription_manager_id",
  },
  "RHSM_API_RESPONSE_HOSTS_META_TYPES": {
    "COUNT": "count",
    "PRODUCT": "product",
  },
  "RHSM_API_RESPONSE_INSTANCES_DATA_TYPES": {
    "BILLING_ACCOUNT_ID": "billing_account_id",
    "BILLING_PROVIDER": "billing_provider",
    "CATEGORY": "category",
    "CLOUD_PROVIDER": "cloud_provider",
    "DISPLAY_NAME": "display_name",
    "INSTANCE_ID": "instance_id",
    "INVENTORY_ID": "inventory_id",
    "LAST_SEEN": "last_seen",
    "MEASUREMENTS": "measurements",
    "NUMBER_OF_GUESTS": "number_of_guests",
    "SUBSCRIPTION_MANAGER_ID": "subscription_manager_id",
  },
  "RHSM_API_RESPONSE_INSTANCES_META_TYPES": {
    "COUNT": "count",
    "MEASUREMENTS": "measurements",
    "PRODUCT": "product",
    "UOM": "uom",
  },
  "RHSM_API_RESPONSE_META": "meta",
  "RHSM_API_RESPONSE_META_TYPES": {
    "COUNT": "count",
    "PRODUCT": "product",
  },
  "RHSM_API_RESPONSE_SLA_TYPES": {
    "NONE": "",
    "PREMIUM": "Premium",
    "SELF": "Self-Support",
    "STANDARD": "Standard",
  },
  "RHSM_API_RESPONSE_SUBSCRIPTIONS_DATA_TYPES": {
    "BILLING_ACCOUNT_ID": "billing_account_id",
    "BILLING_PROVIDER": "billing_provider",
    "CATEGORY": "category",
    "CLOUD_PROVIDER": "cloud_provider",
    "DISPLAY_NAME": "display_name",
    "HAS_INFINITE_QUANTITY": "has_infinite_quantity",
    "INSTANCE_ID": "instance_id",
    "INVENTORY_ID": "inventory_id",
    "LAST_SEEN": "last_seen",
    "MEASUREMENTS": "measurements",
    "NEXT_EVENT_DATE": "next_event_date",
    "NUMBER_OF_GUESTS": "number_of_guests",
    "PRODUCT_NAME": "product_name",
    "QUANTITY": "quantity",
    "SERVICE_LEVEL": "service_level",
    "SUBSCRIPTION_MANAGER_ID": "subscription_manager_id",
    "TOTAL_CAPACITY": "total_capacity",
    "UOM": "uom",
  },
  "RHSM_API_RESPONSE_SUBSCRIPTIONS_META_TYPES": {
    "COUNT": "count",
    "PRODUCT": "product",
    "SUBSCRIPTION_TYPE": "subscription_type",
  },
  "RHSM_API_RESPONSE_SUBSCRIPTION_TYPES": {
    "ANNUAL": "Annual",
    "ON_DEMAND": "On-demand",
  },
  "RHSM_API_RESPONSE_TALLY_CAPACITY_DATA_TYPES": {
    "DATE": "date",
    "HAS_DATA": "has_data",
    "HAS_INFINITE_QUANTITY": "has_infinite_quantity",
    "VALUE": "value",
  },
  "RHSM_API_RESPONSE_TALLY_CAPACITY_META_TYPES": {
    "COUNT": "count",
    "DATE": "date",
    "HAS_CLOUDIGRADE_DATA": "has_cloudigrade_data",
    "HAS_CLOUDIGRADE_MISMATCH": "has_cloudigrade_mismatch",
    "HAS_DATA": "has_data",
    "METRIC_ID": "metric_id",
    "PRODUCT": "product",
    "TOTAL_MONTHLY": "total_monthly",
    "VALUE": "value",
  },
  "RHSM_API_RESPONSE_UOM_TYPES": {
    "CORES": "cores",
    "SOCKETS": "sockets",
  },
  "RHSM_API_RESPONSE_USAGE_TYPES": {
    "DEVELOPMENT": "Development/Test",
    "DISASTER": "Disaster Recovery",
    "PRODUCTION": "Production",
    "UNSPECIFIED": "",
  },
  "RHSM_INTERNAL_PRODUCT_DISPLAY_TYPES": {
    "CAPACITY": "capacity",
    "DUAL_AXES": "dual-axes",
    "HOURLY": "hourly",
    "LEGACY": "legacy",
    "PARTIAL": "partial",
  },
}
`;
